# furnace-presenter

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: cli.cpp  cli.h  config.cpp  config.h  filters.cpp  filters.h  font.cpp  font.h  gui.cpp  gui.h  main.cpp  oscilloscope.cpp  piano_roll.cpp  renderer.cpp  renderer.h  video_builder.cpp  video_builder.h  visualizer.cpp  visualizer.h
src/check/: check_setlocale.c  check_sysIO.c
